--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
+    namespace "com.devilcat.leato"
     compileSdk 34
 
     defaultConfig {
         applicationId "com.devilcat.leato"
         minSdk 23
         targetSdk 34
-        versionCode 1
-        versionName "1.0.8"
+        versionCode 3
+        versionName "1.1"
         archivesBaseName = "Leato"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -34,10 +36,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation platform('com.google.firebase:firebase-bom:33.0.0')
     implementation 'com.google.firebase:firebase-database:21.0.0'
 
     //notifications
@@ -47,21 +48,24 @@ dependencies {
 
     //firebase mobile otp
     implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics-buildtools:3.0.2'
+    implementation(platform("com.google.firebase:firebase-bom:33.4.0"))
+    implementation("com.google.firebase:firebase-crashlytics")
+    implementation("com.google.firebase:firebase-analytics")
 
     //google verification
     implementation 'com.google.firebase:firebase-auth:23.0.0'
-    implementation 'com.google.android.gms:play-services-auth:21.1.1'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
-    implementation 'com.google.android.gms:play-services-auth:21.1.1'
+    implementation 'com.google.android.gms:play-services-auth:21.2.0'
 
     //menu
-    implementation 'androidx.navigation:navigation-fragment:2.7.7'
-    implementation 'androidx.navigation:navigation-ui:2.7.7'
-    implementation 'androidx.activity:activity:1.9.0'
+    implementation 'androidx.navigation:navigation-fragment:2.8.3'
+    implementation 'androidx.navigation:navigation-ui:2.8.3'
+    implementation 'androidx.activity:activity:1.9.3'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
 }
